// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`данные для кнопок зума не будет зумить дальше максимального зума 1`] = `
Object {
  "isDragging": false,
  "isMaxZoomed": true,
  "isMinZoomed": false,
}
`;

exports[`данные для кнопок зума не будет зумить меньше минимального зума 1`] = `
Object {
  "isDragging": false,
  "isMaxZoomed": false,
  "isMinZoomed": true,
}
`;

exports[`данные для кнопок зума правильно рассчитывает следующий зум 1`] = `
Object {
  "isDragging": false,
  "isMaxZoomed": false,
  "isMinZoomed": true,
}
`;

exports[`данные для кнопок зума правильно рассчитывает следующий зум 2`] = `
Object {
  "isDragging": false,
  "isMaxZoomed": false,
  "isMinZoomed": false,
}
`;

exports[`инициализация если это текущий слайд галереи, отправит метрику показа 1`] = `
Array [
  Array [
    "panorama-shows",
    "interior",
  ],
]
`;

exports[`инициализация создаст плеер и передаст в него корректные параметры 1`] = `
Array [
  "PanoramaInteriorPainter_4036500412-1595961776760-KD1uu_card_page",
  mockConstructor {},
  Object {
    "controls": Array [],
    "scrollZoomBehavior": false,
  },
]
`;

exports[`метрика при вращении панорамы в десктопе отправляется при движении влево вниз 1`] = `
Array [
  Array [
    Array [
      "panorama-twist",
      "interior",
      "left",
    ],
  ],
  Array [
    Array [
      "panorama-twist",
      "interior",
      "down",
    ],
  ],
]
`;

exports[`метрика при вращении панорамы в десктопе отправляется при движении вправо вверх 1`] = `
Array [
  Array [
    Array [
      "panorama-twist",
      "interior",
      "right",
    ],
  ],
  Array [
    Array [
      "panorama-twist",
      "interior",
      "up",
    ],
  ],
]
`;

exports[`метрика при вращении панорамы в таче отправляется при движении влево вниз 1`] = `
Array [
  Array [
    Array [
      "panorama-twist",
      "interior",
      "left",
    ],
  ],
  Array [
    Array [
      "panorama-twist",
      "interior",
      "down",
    ],
  ],
]
`;

exports[`метрика при вращении панорамы в таче отправляется при движении вправо вверх 1`] = `
Array [
  Array [
    Array [
      "panorama-twist",
      "interior",
      "right",
    ],
  ],
  Array [
    Array [
      "panorama-twist",
      "interior",
      "up",
    ],
  ],
]
`;

exports[`при смене id панорамы удалит удалит старый плеер и проинициализирует новый 1`] = `
Array [
  Array [
    "PanoramaInteriorPainter_4036500412-1595961776760-KD1uu_card_page",
    mockConstructor {},
    Object {
      "controls": Array [],
      "scrollZoomBehavior": false,
    },
  ],
  Array [
    "PanoramaInteriorPainter_foo_card_page",
    mockConstructor {},
    Object {
      "controls": Array [],
      "scrollZoomBehavior": false,
    },
  ],
]
`;
